--- a/proyecto_noticias/app_proyecto/templates/app_proyecto/index.html
+++ b/proyecto_noticias/app_proyecto/templates/app_proyecto/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
   <head> 
@@ -13,22 +14,22 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
-        <img src="{% static 'img/Caos new.png' %}" width="50" height="30" class="d-inline-block align-top" alt="">
+      <a class="navbar-brand" href="/index">
+        <img src="{% static 'IMG/Caos news.png' %}" width="50" height="30" class="d-inline-block align-top" alt="">
         CAOS NEWS
-        <p> <a class="btn btn-outline-secondary" href="login.html"> Inicio Sesion</a>     
-            <a class="btn btn-outline-secondary" href="formulario.html"> Registrarse </a></p>
+        <p> <a class="btn btn-outline-secondary" href="/login"> Inicio Sesion</a>     
+            <a class="btn btn-outline-secondary" href="/formulario"> Registrarse </a></p>
       </a>
     </nav>
     <div style="border: black 3px solid;" class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-between">
-        <a class="p-2 text-muted" href="cat_actualidad.html">Actualidad</a>
-        <a class="p-2 text-muted" href="cat_animales.html">Animales</a>
-        <a class="p-2 text-muted" href="cat_deportes.html">Deportes</a>
-        <a class="p-2 text-muted" href="cat_salud.html">Salud </a>
-        <a class="p-2 text-muted" href="cat_tecnologia.html">Tecnologia</a>
-        <a class="p-2 text-muted" href="cat_ocio.html">Ocio</a>
-        <a class="p-2 text-muted" href="api_de_prueba.html">Internacional</a>
+        <a class="p-2 text-muted" href="/cat_actualidad">Actualidad</a>
+        <a class="p-2 text-muted" href="/cat_animales">Animales</a>
+        <a class="p-2 text-muted" href="/cat_deportes">Deportes</a>
+        <a class="p-2 text-muted" href="/cat_salud">Salud </a>
+        <a class="p-2 text-muted" href="/cat_tecnologia">Tecnologia</a>
+        <a class="p-2 text-muted" href="/cat_ocio">Ocio</a>
+        <a class="p-2 text-muted" href="/api_de_prueba">Internacional</a>
       </nav>
     </div>
         <div class="container">
@@ -43,11 +44,11 @@
                         <div class="carousel-inner">
                         <div class="carousel-item active">
 
-                            <img src="{ % static 'IMG/laptop2.jpg' % }" class="d-block w-100" alt="..."
+                            <img src="{% static 'IMG/laptop2.jpg' %}" class="d-block w-100" alt="..."
                                   width="620px" height="450px"> 
                             <div class="carousel-caption d-none d-md-block">
                             <h5>¿Cómo usas tu Laptop?</h5>
-                            <a class="p-2" href="tecno3.html" target="_blank" >Haz click para saber...</a>
+                            <a class="p-2" href="/tecno3" target="_blank" >Haz click para saber...</a>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -56,15 +57,15 @@
                                 width="620px" height="450px">
                             <div class="carousel-caption d-none d-md-block">
                             <h5>¿Cuándo es el día del gato?</h5>
-                            <a class="p-2" href="dia_gato.html" target="_blank" >Haz click para saber...</a>
+                            <a class="p-2" href="/dia_gato" target="_blank" >Haz click para saber...</a>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="IMG\nintendo switch.jpg" class="d-block w-100" alt="..." 
+                            <img src="{% static 'IMG/nintendo switch.jpg' %}" class="d-block w-100" alt="..." 
                             width="620px" height="450px">
                             <div class="carousel-caption d-none d-md-block">
                             <h5>Nintendo Switch lo hizo denuevo</h5>
-                            <a class="p-2" href="switch.html" target="_blank" >Haz click para saber...</a>
+                            <a class="p-2" href="/switch" target="_blank" >Haz click para saber...</a>
                             </div>
                         </div>
                         </div>
@@ -82,9 +83,9 @@
        <br>
         <div class="card-group">
           <div class="card">
-            <a href="https://chile.as.com/chile/2021/04/16/actualidad/1618582302_811133.html" target="_blank" title="sii">
+            <a href="https://chile.as.com/chile/2021/04/16/actualidad/1618582302_811133" target="_blank" title="sii">
 
-              <img alt="COVID-19" class="card-img-top" src="IMG\covidd1.jpg" />
+              <img alt="COVID-19" class="card-img-top" src="{% static 'IMG\covidd1.jpg' %}" />
              </a>
             <div class="card-body">
               <h5 class="card-title">COVID-19 </h5>
@@ -93,8 +94,8 @@
             </div>
           </div>
           <div class="card">
-            <a href="Bad_Bunny.html" target="_blank" title="sii">
-              <img alt="Bono Clase Media" class="card-img-top" src="{ % static 'app_proyecto/bad bunny3.jpg' %}" >
+            <a href="/Bad_Bunny" target="_blank" title="sii">
+              <img alt="Bono Clase Media" class="card-img-top" src="{% static 'IMG/bad bunny3.jpg' %}" >
              </a>
             <div class="card-body">
               <h5 class="card-title">Bad Bunny, "EL CONEJO MALO" </h5>
@@ -104,8 +105,8 @@
           </div>
           <div class="card">
 
-             <a href="Universidad_Catolica.html" target="_blank" title="catolica.jpg">
-              <img alt="Partido Catolica" class="card-img-top" src="IMG\deportes catolica.jpg" />
+             <a href="/Universidad_Catolica" target="_blank" title="catolica.jpg">
+              <img alt="Partido Catolica" class="card-img-top" src="{% static 'IMG/deportes catolica.jpg' %}" />
              </a>
             <div class="card-body">
               <h5 class="card-title">La UC gana con sufrimiento</h5>
@@ -117,8 +118,9 @@
         <br>
         <br>
         <h2 style="text-align: center;">¿Desea comunicarse con nosotros?</h2>
-        <p style="text-align: center;"><a class="btn btn-outline-secondary" href="Contactanos.html"> CONTACTENOS</a></p>
+        <p style="text-align: center;"><a class="btn btn-outline-secondary" href="/Contactanos"> CONTACTENOS</a></p>
         <small class="d-inline-block text-muted mt-5">Todos los derechos reservados | © 2021 CaosNew</small>
       </body>
   </html>
-  
+
+{% endblock content %}
