--- a/proyecto_noticias/app_proyecto/templates/app_proyecto/Formulario.html
+++ b/proyecto_noticias/app_proyecto/templates/app_proyecto/Formulario.html
@@ -280,7 +280,7 @@
             <input
               type="submit"
               class="btn btn-outline-secondary"
-              href="/Confirmacion"
+              href="/confirmacion"
               style="color: black; border: 2px solid black"
             />
           </div>
