--- a/proyecto_noticias/app_proyecto/templates/app_proyecto/login.html
+++ b/proyecto_noticias/app_proyecto/templates/app_proyecto/login.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <p style="background-color: white;text-align: center;"> <a class="btn btn-outline-secondary" href="/Confirmacion" style="border: 2px solid black; color:black"> Iniciar Sesion</a>     
-                            <a class="btn btn-outline-secondary" href="/Formulario" style="border: 2px solid black; color:black"> Registrate </a></p>
+                            <a class="btn btn-outline-secondary" href="/formulario" style="border: 2px solid black; color:black"> Registrate </a></p>
                         <p style="background-color: white;text-align: center;"> <a class="btn btn-outline-secondary" href="/index" style="border: 2px solid black; color:black"> Volver al inicio</a>
 
                     </form>
