--- a/proyecto_noticias/app_proyecto/templates/app_proyecto/actualidad.html
+++ b/proyecto_noticias/app_proyecto/templates/app_proyecto/actualidad.html
@@ -88,7 +88,7 @@
       <div class="row no-gutters">
         <div class="col-md-4">
           <a href="/Bad_Bunny"  title="WWE">
-            <img alt="bad bunny"  src="{% static 'IMG\bad bunny.jpg' %}" width="300" height="170"/>
+            <img alt="bad bunny"  src="{% static 'IMG\bad_bunny.jpg' %}" width="300" height="170"/>
            </a>
         </div>
         <div class="col-md-8">
